<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="7dp" 
    >
   	
    	<TextView 
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:text="@string/inter_service"
    	    style="?android:listSeparatorTextViewStyle"
    	    android:padding="0dp"
    	    android:layout_marginLeft="6dp"/>
    	
    	<LinearLayout 
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:orientation="horizontal">
    	    
    	    <Button 
    	        android:id="@+id/btStart"
    	    	android:layout_width="wrap_content"
    	    	android:layout_height="wrap_content"
    	    	android:text="@string/start"
    	    	android:layout_marginLeft="16dp"
    	    	android:layout_weight="1"
    	    	android:padding="0dp"/>
    	    
    	    <Button 
    	        android:id="@+id/btStop"
    	    	android:layout_width="wrap_content"
    	    	android:layout_height="wrap_content"
    	    	android:text="@string/stop"
    	    	android:layout_marginRight="16dp"
    	    	android:layout_weight="1"
    	    	android:padding="0dp"/>
    	    
    	</LinearLayout>
    	
    	<TextView
        	android:layout_width="match_parent"
        	android:layout_marginTop="7dp"
        	android:layout_height="wrap_content"
        	android:text="Wi-fi mode"
        	style="?android:listSeparatorTextViewStyle"
        	android:padding="0dp"
        	android:layout_marginLeft="6dp"/> 
        	
    	<Spinner     
        	android:id = "@+id/Spinner_wifi_"     
        	android:layout_width = "match_parent"     
        	android:layout_height ="wrap_content"
        	android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            >     
    	</Spinner>
    	
    	<TextView
        	android:layout_width="match_parent"
        	android:layout_marginTop="7dp"
        	android:layout_height="wrap_content"
        	android:text="Captain-adhoc"
        	style="?android:listSeparatorTextViewStyle"
        	android:padding="0dp"
        	android:layout_marginLeft="6dp"/>
    	
    	<Button 
    	    android:id="@+id/btCaptain"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:text="@string/captain"
    	    android:layout_marginRight="16dp"
    	    android:layout_marginLeft="16dp"
    	    android:clickable="false"
    	    android:padding="0dp"/>
    	
    	<!-- <TextView
        	android:layout_width="match_parent"
        	android:layout_marginTop="7dp"
        	android:layout_height="wrap_content"
        	android:text="@string/url"
        	style="?android:listSeparatorTextViewStyle"
        	android:padding="0dp"
        	android:layout_marginLeft="6dp"/>
            
    	<EditText 
        	android:id="@+id/url_edit_text"
        	android:layout_width="match_parent"
        	android:layout_height="60dp"
        	android:layout_marginLeft="16dp"
        	android:layout_marginRight="16dp"
        	android:hint="@string/hint"
        	android:padding="0dp"/>
    	  	
    	<Button 
    	    android:id="@+id/btConfirm"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:text="@string/confirm"
    	    android:layout_marginRight="16dp"
    	    android:layout_marginLeft="16dp"
    	    android:padding="0dp"/>   -->
    	
        <TextView
        	android:layout_width="match_parent"
        	android:layout_marginTop="7dp"
        	android:layout_height="wrap_content"
        	android:text="@string/player"
        	style="?android:listSeparatorTextViewStyle"
        	android:padding="0dp"
        	android:layout_marginLeft="6dp"/>
        
        <Button 
            android:id="@+id/btChoose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/choose"
            android:padding="0dp"/>
        
               
      
       
        
       <!--   <LinearLayout 
            
            android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:orientation="horizontal">
    	    
    	    <Button
    	        android:id="@+id/rate_low"
    	        android:layout_width="wrap_content"
    	        android:layout_height="wrap_content"
    	        android:layout_marginLeft="16dp"
    	        android:layout_weight="1"
    	        android:text="low">
    	        
    	    </Button>
    	    
    	    <Button
    	        android:id="@+id/rate_mid"
    	        android:layout_width="wrap_content"
    	        android:layout_height="wrap_content"
    	        android:layout_weight="1"
    	        android:text="mid">
    	        
    	    </Button>
    	    
    	    <Button
    	        android:id="@+id/rate_high"
    	        android:layout_width="wrap_content"
    	        android:layout_height="wrap_content"
    	        android:layout_marginRight="16dp"
    	        android:layout_weight="1"
    	        android:text="high">
    	        
    	    </Button>
    	    
            </LinearLayout>   -->
    

</LinearLayout>
